--- a/reinforcement_learning/q_learning/frozen_lake.ipynb
+++ b/reinforcement_learning/q_learning/frozen_lake.ipynb
@@ -2,23 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (1.26.0)\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "[notice] A new release of pip is available: 23.1.2 -> 23.2.1\n",
-      "[notice] To update, run: C:\\Users\\clayb\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n",
       "\n",
       "[notice] A new release of pip is available: 23.1.2 -> 23.2.1\n",
       "[notice] To update, run: C:\\Users\\clayb\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
@@ -28,128 +18,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting gym\n",
-      "  Downloading gym-0.26.2.tar.gz (721 kB)\n",
-      "                                              0.0/721.7 kB ? eta -:--:--\n",
-      "                                              10.2/721.7 kB ? eta -:--:--\n",
-      "     -                                     30.7/721.7 kB 435.7 kB/s eta 0:00:02\n",
-      "     -                                     30.7/721.7 kB 435.7 kB/s eta 0:00:02\n",
-      "     -                                     30.7/721.7 kB 435.7 kB/s eta 0:00:02\n",
-      "     -                                     30.7/721.7 kB 435.7 kB/s eta 0:00:02\n",
-      "     --                                    41.0/721.7 kB 115.5 kB/s eta 0:00:06\n",
-      "     ---                                   61.4/721.7 kB 172.4 kB/s eta 0:00:04\n",
-      "     ---                                   61.4/721.7 kB 172.4 kB/s eta 0:00:04\n",
-      "     ----                                  81.9/721.7 kB 183.3 kB/s eta 0:00:04\n",
-      "     ----                                  92.2/721.7 kB 180.8 kB/s eta 0:00:04\n",
-      "     ----                                  92.2/721.7 kB 180.8 kB/s eta 0:00:04\n",
-      "     ----                                  92.2/721.7 kB 180.8 kB/s eta 0:00:04\n",
-      "     -----                                112.6/721.7 kB 177.2 kB/s eta 0:00:04\n",
-      "     -----                                112.6/721.7 kB 177.2 kB/s eta 0:00:04\n",
-      "     -----                                112.6/721.7 kB 177.2 kB/s eta 0:00:04\n",
-      "     -----                                112.6/721.7 kB 177.2 kB/s eta 0:00:04\n",
-      "     -----                                112.6/721.7 kB 177.2 kB/s eta 0:00:04\n",
-      "     ------                               122.9/721.7 kB 138.5 kB/s eta 0:00:05\n",
-      "     ------                               122.9/721.7 kB 138.5 kB/s eta 0:00:05\n",
-      "     ------                               122.9/721.7 kB 138.5 kB/s eta 0:00:05\n",
-      "     ------                               122.9/721.7 kB 138.5 kB/s eta 0:00:05\n",
-      "     -------                              143.4/721.7 kB 131.0 kB/s eta 0:00:05\n",
-      "     --------                             174.1/721.7 kB 154.1 kB/s eta 0:00:04\n",
-      "     --------                             174.1/721.7 kB 154.1 kB/s eta 0:00:04\n",
-      "     ---------                            194.6/721.7 kB 163.8 kB/s eta 0:00:04\n",
-      "     ----------                           204.8/721.7 kB 166.0 kB/s eta 0:00:04\n",
-      "     ----------                           204.8/721.7 kB 166.0 kB/s eta 0:00:04\n",
-      "     ----------                           204.8/721.7 kB 166.0 kB/s eta 0:00:04\n",
-      "     -----------                          225.3/721.7 kB 163.8 kB/s eta 0:00:04\n",
-      "     -----------                          225.3/721.7 kB 163.8 kB/s eta 0:00:04\n",
-      "     ------------                         245.8/721.7 kB 167.5 kB/s eta 0:00:03\n",
-      "     ------------                         256.0/721.7 kB 165.5 kB/s eta 0:00:03\n",
-      "     -------------                        276.5/721.7 kB 172.1 kB/s eta 0:00:03\n",
-      "     --------------                       286.7/721.7 kB 173.4 kB/s eta 0:00:03\n",
-      "     ---------------                      307.2/721.7 kB 184.4 kB/s eta 0:00:03\n",
-      "     ----------------                     327.7/721.7 kB 191.7 kB/s eta 0:00:03\n",
-      "     ----------------                     337.9/721.7 kB 194.1 kB/s eta 0:00:02\n",
-      "     -----------------                    358.4/721.7 kB 198.9 kB/s eta 0:00:02\n",
-      "     -----------------                    358.4/721.7 kB 198.9 kB/s eta 0:00:02\n",
-      "     -----------------                    358.4/721.7 kB 198.9 kB/s eta 0:00:02\n",
-      "     ------------------                   368.6/721.7 kB 189.5 kB/s eta 0:00:02\n",
-      "     ------------------                   368.6/721.7 kB 189.5 kB/s eta 0:00:02\n",
-      "     ------------------                   368.6/721.7 kB 189.5 kB/s eta 0:00:02\n",
-      "     -------------------                  389.1/721.7 kB 186.5 kB/s eta 0:00:02\n",
-      "     -------------------                  389.1/721.7 kB 186.5 kB/s eta 0:00:02\n",
-      "     --------------------                 409.6/721.7 kB 187.9 kB/s eta 0:00:02\n",
-      "     --------------------                 409.6/721.7 kB 187.9 kB/s eta 0:00:02\n",
-      "     --------------------                 409.6/721.7 kB 187.9 kB/s eta 0:00:02\n",
-      "     --------------------                 409.6/721.7 kB 187.9 kB/s eta 0:00:02\n",
-      "     --------------------                 409.6/721.7 kB 187.9 kB/s eta 0:00:02\n",
-      "     --------------------                 409.6/721.7 kB 187.9 kB/s eta 0:00:02\n",
-      "     --------------------                 409.6/721.7 kB 187.9 kB/s eta 0:00:02\n",
-      "     --------------------                 409.6/721.7 kB 187.9 kB/s eta 0:00:02\n",
-      "     --------------------                 419.8/721.7 kB 161.8 kB/s eta 0:00:02\n",
-      "     --------------------                 419.8/721.7 kB 161.8 kB/s eta 0:00:02\n",
-      "     --------------------                 419.8/721.7 kB 161.8 kB/s eta 0:00:02\n",
-      "     --------------------                 419.8/721.7 kB 161.8 kB/s eta 0:00:02\n",
-      "     --------------------                 419.8/721.7 kB 161.8 kB/s eta 0:00:02\n",
-      "     --------------------                 419.8/721.7 kB 161.8 kB/s eta 0:00:02\n",
-      "     --------------------                 419.8/721.7 kB 161.8 kB/s eta 0:00:02\n",
-      "     --------------------                 419.8/721.7 kB 161.8 kB/s eta 0:00:02\n",
-      "     ----------------------               450.6/721.7 kB 152.3 kB/s eta 0:00:02\n",
-      "     ----------------------               450.6/721.7 kB 152.3 kB/s eta 0:00:02\n",
-      "     -----------------------              471.0/721.7 kB 154.4 kB/s eta 0:00:02\n",
-      "     -----------------------              471.0/721.7 kB 154.4 kB/s eta 0:00:02\n",
-      "     ------------------------             491.5/721.7 kB 157.1 kB/s eta 0:00:02\n",
-      "     -------------------------            501.8/721.7 kB 158.9 kB/s eta 0:00:02\n",
-      "     -------------------------            501.8/721.7 kB 158.9 kB/s eta 0:00:02\n",
-      "     --------------------------           522.2/721.7 kB 160.6 kB/s eta 0:00:02\n",
-      "     --------------------------           522.2/721.7 kB 160.6 kB/s eta 0:00:02\n",
-      "     --------------------------           522.2/721.7 kB 160.6 kB/s eta 0:00:02\n",
-      "     --------------------------           532.5/721.7 kB 155.4 kB/s eta 0:00:02\n",
-      "     --------------------------           532.5/721.7 kB 155.4 kB/s eta 0:00:02\n",
-      "     ---------------------------          553.0/721.7 kB 157.2 kB/s eta 0:00:02\n",
-      "     ----------------------------         573.4/721.7 kB 161.6 kB/s eta 0:00:01\n",
-      "     -----------------------------        583.7/721.7 kB 163.1 kB/s eta 0:00:01\n",
-      "     -----------------------------        583.7/721.7 kB 163.1 kB/s eta 0:00:01\n",
-      "     -----------------------------        593.9/721.7 kB 161.7 kB/s eta 0:00:01\n",
-      "     -----------------------------        593.9/721.7 kB 161.7 kB/s eta 0:00:01\n",
-      "     -----------------------------        593.9/721.7 kB 161.7 kB/s eta 0:00:01\n",
-      "     -------------------------------      624.6/721.7 kB 162.5 kB/s eta 0:00:01\n",
-      "     -------------------------------      624.6/721.7 kB 162.5 kB/s eta 0:00:01\n",
-      "     -------------------------------      624.6/721.7 kB 162.5 kB/s eta 0:00:01\n",
-      "     -------------------------------      624.6/721.7 kB 162.5 kB/s eta 0:00:01\n",
-      "     --------------------------------     645.1/721.7 kB 161.2 kB/s eta 0:00:01\n",
-      "     --------------------------------     645.1/721.7 kB 161.2 kB/s eta 0:00:01\n",
-      "     ---------------------------------    665.6/721.7 kB 161.3 kB/s eta 0:00:01\n",
-      "     ---------------------------------    665.6/721.7 kB 161.3 kB/s eta 0:00:01\n",
-      "     ---------------------------------    675.8/721.7 kB 161.4 kB/s eta 0:00:01\n",
-      "     ---------------------------------    675.8/721.7 kB 161.4 kB/s eta 0:00:01\n",
-      "     ----------------------------------   696.3/721.7 kB 161.4 kB/s eta 0:00:01\n",
-      "     ----------------------------------   696.3/721.7 kB 161.4 kB/s eta 0:00:01\n",
-      "     ----------------------------------   696.3/721.7 kB 161.4 kB/s eta 0:00:01\n",
-      "     ----------------------------------   696.3/721.7 kB 161.4 kB/s eta 0:00:01\n",
-      "     ----------------------------------   696.3/721.7 kB 161.4 kB/s eta 0:00:01\n",
-      "     ----------------------------------   696.3/721.7 kB 161.4 kB/s eta 0:00:01\n",
-      "     ----------------------------------   696.3/721.7 kB 161.4 kB/s eta 0:00:01\n",
-      "     ----------------------------------   696.3/721.7 kB 161.4 kB/s eta 0:00:01\n",
-      "     -----------------------------------  716.8/721.7 kB 152.8 kB/s eta 0:00:01\n",
-      "     ------------------------------------ 721.7/721.7 kB 153.3 kB/s eta 0:00:00\n",
-      "  Installing build dependencies: started\n",
-      "  Installing build dependencies: finished with status 'done'\n",
-      "  Getting requirements to build wheel: started\n",
-      "  Getting requirements to build wheel: finished with status 'done'\n",
-      "  Preparing metadata (pyproject.toml): started\n",
-      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Requirement already satisfied: numpy in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (1.26.0)\n",
+      "Requirement already satisfied: gym in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (0.26.2)\n",
       "Requirement already satisfied: numpy>=1.18.0 in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (1.26.0)\n",
-      "Collecting cloudpickle>=1.2.0 (from gym)\n",
-      "  Downloading cloudpickle-2.2.1-py3-none-any.whl (25 kB)\n",
-      "Collecting gym-notices>=0.0.4 (from gym)\n",
-      "  Downloading gym_notices-0.0.8-py3-none-any.whl (3.0 kB)\n",
-      "Building wheels for collected packages: gym\n",
-      "  Building wheel for gym (pyproject.toml): started\n",
-      "  Building wheel for gym (pyproject.toml): finished with status 'done'\n",
-      "  Created wheel for gym: filename=gym-0.26.2-py3-none-any.whl size=827633 sha256=f7720a7470a183a7a7b30542f79fa1f07cba234e11fb7e3fb83f52d38d8aea20\n",
-      "  Stored in directory: c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local\\pip\\cache\\wheels\\b9\\22\\6d\\3e7b32d98451b4cd9d12417052affbeeeea012955d437da1da\n",
-      "Successfully built gym\n",
-      "Installing collected packages: gym-notices, cloudpickle, gym\n",
-      "Successfully installed cloudpickle-2.2.1 gym-0.26.2 gym-notices-0.0.8\n"
+      "Requirement already satisfied: cloudpickle>=1.2.0 in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (2.2.1)\n",
+      "Requirement already satisfied: gym-notices>=0.0.4 in c:\\users\\clayb\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from gym) (0.0.8)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.1.2 -> 23.2.1\n",
+      "[notice] To update, run: C:\\Users\\clayb\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
