--- a/reinforcement_learning/temporal_difference/temporal_difference.ipynb
+++ b/reinforcement_learning/temporal_difference/temporal_difference.ipynb
@@ -11,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -69,6 +70,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -77,9 +79,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'FrozenLakeEnv' object has no attribute 'seed'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 29\u001b[0m\n\u001b[0;32m     27\u001b[0m V \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mwhere(env\u001b[39m.\u001b[39mdesc \u001b[39m==\u001b[39m \u001b[39mb\u001b[39m\u001b[39m'\u001b[39m\u001b[39mH\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mreshape(\u001b[39m64\u001b[39m)\u001b[39m.\u001b[39mastype(\u001b[39m'\u001b[39m\u001b[39mfloat64\u001b[39m\u001b[39m'\u001b[39m) \n\u001b[0;32m     28\u001b[0m np\u001b[39m.\u001b[39mset_printoptions(precision\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[1;32m---> 29\u001b[0m env\u001b[39m.\u001b[39;49mseed(\u001b[39m0\u001b[39m)\n\u001b[0;32m     30\u001b[0m \u001b[39mprint\u001b[39m(monte_carlo(env, V, policy)\u001b[39m.\u001b[39mreshape((\u001b[39m8\u001b[39m, \u001b[39m8\u001b[39m)))\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\gym\\core.py:241\u001b[0m, in \u001b[0;36mWrapper.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    239\u001b[0m \u001b[39mif\u001b[39;00m name\u001b[39m.\u001b[39mstartswith(\u001b[39m\"\u001b[39m\u001b[39m_\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[0;32m    240\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39maccessing private attribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is prohibited\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> 241\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mgetattr\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv, name)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\gym\\core.py:241\u001b[0m, in \u001b[0;36mWrapper.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    239\u001b[0m \u001b[39mif\u001b[39;00m name\u001b[39m.\u001b[39mstartswith(\u001b[39m\"\u001b[39m\u001b[39m_\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[0;32m    240\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39maccessing private attribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is prohibited\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> 241\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mgetattr\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv, name)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\gym\\core.py:241\u001b[0m, in \u001b[0;36mWrapper.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    239\u001b[0m \u001b[39mif\u001b[39;00m name\u001b[39m.\u001b[39mstartswith(\u001b[39m\"\u001b[39m\u001b[39m_\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[0;32m    240\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39maccessing private attribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is prohibited\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> 241\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mgetattr\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv, name)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'FrozenLakeEnv' object has no attribute 'seed'"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(0)\n",
     "\n",
@@ -114,6 +131,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -122,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +192,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -182,9 +201,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'FrozenLakeEnv' object has no attribute 'seed'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 29\u001b[0m\n\u001b[0;32m     27\u001b[0m V \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mwhere(env\u001b[39m.\u001b[39mdesc \u001b[39m==\u001b[39m \u001b[39mb\u001b[39m\u001b[39m'\u001b[39m\u001b[39mH\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mreshape(\u001b[39m64\u001b[39m)\u001b[39m.\u001b[39mastype(\u001b[39m'\u001b[39m\u001b[39mfloat64\u001b[39m\u001b[39m'\u001b[39m) \n\u001b[0;32m     28\u001b[0m np\u001b[39m.\u001b[39mset_printoptions(precision\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[1;32m---> 29\u001b[0m env\u001b[39m.\u001b[39;49mseed(\u001b[39m0\u001b[39m)\n\u001b[0;32m     30\u001b[0m \u001b[39mprint\u001b[39m(monte_carlo(env, V, policy)\u001b[39m.\u001b[39mreshape((\u001b[39m8\u001b[39m, \u001b[39m8\u001b[39m)))\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\gym\\core.py:241\u001b[0m, in \u001b[0;36mWrapper.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    239\u001b[0m \u001b[39mif\u001b[39;00m name\u001b[39m.\u001b[39mstartswith(\u001b[39m\"\u001b[39m\u001b[39m_\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[0;32m    240\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39maccessing private attribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is prohibited\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> 241\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mgetattr\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv, name)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\gym\\core.py:241\u001b[0m, in \u001b[0;36mWrapper.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    239\u001b[0m \u001b[39mif\u001b[39;00m name\u001b[39m.\u001b[39mstartswith(\u001b[39m\"\u001b[39m\u001b[39m_\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[0;32m    240\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39maccessing private attribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is prohibited\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> 241\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mgetattr\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv, name)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\gym\\core.py:241\u001b[0m, in \u001b[0;36mWrapper.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    239\u001b[0m \u001b[39mif\u001b[39;00m name\u001b[39m.\u001b[39mstartswith(\u001b[39m\"\u001b[39m\u001b[39m_\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[0;32m    240\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39maccessing private attribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is prohibited\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> 241\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mgetattr\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv, name)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'FrozenLakeEnv' object has no attribute 'seed'"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(0)\n",
     "\n",
@@ -219,6 +253,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -227,14 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sarsa_lambtha(env, Q, lambtha, episodes=5000, max_steps=100, alpha=0.1, gamma=0.99, epsilon=1, min_epsilon=0.1, epsilon_decay=0.05):\n",
     "    \"\"\"\n",
     "    Performs the SARSA(λ) algorithm to update the action-value function based on the policy.\n",
-    "\n",
+    "b\n",
     "    Parameters:\n",
     "    env: The environment.\n",
     "    Q: The action-value function.\n",
@@ -285,6 +320,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -293,80 +329,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 3.7642e-03  2.6942e-03  2.5738e-03  2.5432e-03]\n",
-      " [ 2.3518e-03  4.2909e-03  3.1204e-03  2.3354e-03]\n",
-      " [ 3.7641e-03  5.2417e-03  2.9398e-03  3.9231e-03]\n",
-      " [ 3.8798e-03  3.8118e-03  4.1403e-03  1.0694e-02]\n",
-      " [ 7.1160e-03  1.4607e-02  1.4131e-02  8.1125e-03]\n",
-      " [ 7.5630e-03  2.7302e-02  1.9421e-02  1.7322e-02]\n",
-      " [ 4.2409e-02  1.7769e-02  3.1961e-02  1.1431e-02]\n",
-      " [ 9.4788e-03  1.0871e-02  1.1786e-02  2.5303e-02]\n",
-      " [ 3.5272e-03  2.8264e-03  4.1816e-03  3.6653e-03]\n",
-      " [ 2.0944e-03  3.4671e-03  2.7354e-03  6.7579e-03]\n",
-      " [ 3.1059e-03  9.8110e-03  2.2333e-03  2.7272e-03]\n",
-      " [ 1.1634e-03  3.2468e-03  5.5223e-03  4.2952e-03]\n",
-      " [ 1.3937e-02  1.3684e-02  8.0174e-03  6.3906e-03]\n",
-      " [ 2.2853e-02  1.2878e-02  9.0955e-03  1.1868e-02]\n",
-      " [ 3.0123e-02  1.6305e-02  2.0007e-02  1.4396e-02]\n",
-      " [ 1.6091e-02  1.7035e-02  2.0579e-02  1.1247e-02]\n",
-      " [ 2.3093e-03  1.7324e-03  1.6756e-03  2.0751e-03]\n",
-      " [ 2.3237e-03  2.6678e-03  2.7045e-03  1.9742e-03]\n",
-      " [ 1.9408e-03  2.4748e-03  4.4871e-03  2.4119e-03]\n",
-      " [-5.4027e-04 -5.2404e-04 -5.2673e-04 -5.1566e-04]\n",
-      " [ 2.2340e-02  4.8941e-03  7.3475e-03  9.9647e-03]\n",
-      " [ 7.6128e-03  2.9867e-02  4.4468e-03  1.2934e-02]\n",
-      " [ 1.9585e-02  2.1501e-02  4.8331e-02  2.0660e-02]\n",
-      " [ 5.7927e-02  5.5325e-02  2.9672e-02  2.1590e-02]\n",
-      " [ 2.2796e-03  1.2757e-03  2.1793e-03  1.6645e-03]\n",
-      " [ 1.8488e-03  1.2160e-03  3.1211e-03  1.0094e-03]\n",
-      " [ 4.5287e-03  7.2438e-04  1.2276e-03  1.5209e-03]\n",
-      " [ 1.3758e-04  3.1330e-03  1.7235e-03  5.2713e-03]\n",
-      " [ 2.2067e-02  1.5642e-02  1.3480e-02  3.2856e-03]\n",
-      " [-1.4968e-03 -1.4532e-03 -1.4662e-03 -1.0499e-03]\n",
-      " [ 2.6854e-02  3.2235e-02  2.9190e-02  5.9176e-02]\n",
-      " [ 1.1248e-01  9.5249e-02  1.1596e-01  8.7829e-02]\n",
-      " [ 2.2511e-03  1.1155e-03  2.0595e-03  1.5772e-03]\n",
-      " [ 1.3713e-03  8.7360e-04  3.0321e-04  1.3551e-03]\n",
-      " [ 6.1882e-04  5.1253e-05  1.2012e-04  9.1957e-04]\n",
-      " [-6.0774e-04 -6.2382e-04 -7.2257e-04 -5.1576e-04]\n",
-      " [ 7.1922e-02  6.6952e-02  9.4489e-02  3.4766e-02]\n",
-      " [ 1.6353e-01  2.2292e-01  1.0514e-01  1.1700e-01]\n",
-      " [ 3.2307e-02  1.2834e-01  2.7558e-02  9.1056e-02]\n",
-      " [ 9.5074e-02  1.5809e-01  1.6659e-01  4.8979e-02]\n",
-      " [ 3.9266e-03  9.2773e-04  3.6776e-03  1.2442e-03]\n",
-      " [ 7.1927e-04  7.6979e-04  7.8555e-04  7.2651e-04]\n",
-      " [ 5.1912e-04  5.1707e-04  5.3439e-04  5.3051e-04]\n",
-      " [ 1.4577e-01  4.4693e-02  3.5321e-01  1.8974e-01]\n",
-      " [ 1.5939e-01  2.3051e-01  3.1179e-01  8.3100e-02]\n",
-      " [ 1.3345e-01  3.3364e-01  2.9740e-01  1.3627e-01]\n",
-      " [-4.1956e-04 -9.8898e-04 -1.6598e-03 -1.4273e-03]\n",
-      " [ 2.4951e-01  2.7240e-01  3.1973e-01  2.7536e-01]\n",
-      " [ 1.8249e-02  1.5212e-02  1.0162e-02  2.9693e-03]\n",
-      " [-1.1539e-04 -1.1333e-04 -1.3537e-04 -1.0795e-04]\n",
-      " [ 2.5252e-01  4.6136e-01  2.8686e-01  1.4574e-01]\n",
-      " [ 2.3793e-02  1.1214e-01  4.5630e-01  4.3474e-01]\n",
-      " [ 8.3949e-02  8.8648e-02  8.7559e-02  8.6060e-02]\n",
-      " [ 5.2816e-01  2.5581e-01  4.4771e-02  5.6198e-01]\n",
-      " [ 9.9995e-02  9.6485e-02  9.7882e-02  9.9891e-02]\n",
-      " [ 3.9458e-01  6.9812e-01  6.1576e-01  4.7493e-01]\n",
-      " [ 2.5764e-02  5.1570e-02  5.0944e-02  3.6603e-02]\n",
-      " [ 6.6664e-02  2.0588e-01  6.4209e-02  9.2616e-02]\n",
-      " [ 2.3777e-01  2.9948e-02  1.8813e-01  2.2073e-01]\n",
-      " [ 1.0247e-01  1.0599e-01  1.0923e-01  1.0510e-01]\n",
-      " [ 8.6386e-01  1.1753e-01  5.1738e-01  1.3207e-01]\n",
-      " [ 6.6977e-01  3.7059e-01  5.3020e-01  1.7878e-01]\n",
-      " [ 1.4485e-01  4.8806e-01  3.5561e-01  8.5987e-01]\n",
-      " [ 2.6164e-01  2.7326e-01  2.6610e-01  2.6938e-01]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.random.seed(0)\n",
     "env = gym.make('FrozenLake8x8-v0')\n",
@@ -392,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
