--- a/reinforcement_learning/pipeline/ml_life_cycle/MLFlow.ipynb
+++ b/reinforcement_learning/pipeline/ml_life_cycle/MLFlow.ipynb
@@ -28,23 +28,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlflow.set_tracking_uri(\"remote_server_uri\")"
+    "mlflow.set_tracking_uri(\"http://127.0.0.1:5000\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current tracking URI:  remote_server_uri\n"
+      "Current tracking URI:  http://127.0.0.1:5000\n"
      ]
     }
    ],
@@ -54,44 +54,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Experiment: artifact_location='file:///c:/Users/clayb/Documents/GitHub/holbertonschool-machine_learning/reinforcement_learning/pipeline/ml_life_cycle/remote_server_uri/149871096565536443', creation_time=1697104473290, experiment_id='149871096565536443', last_update_time=1697104473290, lifecycle_stage='active', name='KNN', tags={}>"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mlflow.set_experiment(\"KNN\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mlflow.end_run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/10/12 05:00:12 WARNING mlflow.utils.autologging_utils: You are using an unsupported version of sklearn. If you encounter errors during autologging, try upgrading / downgrading sklearn to a supported version, or try upgrading MLflow.\n",
-      "2023/10/12 05:00:13 INFO mlflow.tracking.fluent: Autologging successfully enabled for sklearn.\n"
+      "2023/10/12 05:33:16 INFO mlflow.tracking.fluent: Experiment with name 'KNN2' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='mlflow-artifacts:/445246962365691981', creation_time=1697106796073, experiment_id='445246962365691981', last_update_time=1697106796073, lifecycle_stage='active', name='KNN2', tags={}>"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlflow.set_experiment(\"KNN2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/10/12 05:33:39 WARNING mlflow.utils.autologging_utils: You are using an unsupported version of sklearn. If you encounter errors during autologging, try upgrading / downgrading sklearn to a supported version, or try upgrading MLflow.\n",
+      "2023/10/12 05:33:39 INFO mlflow.tracking.fluent: Autologging successfully enabled for sklearn.\n"
      ]
     }
    ],
@@ -104,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +143,7 @@
        "'euclidean'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,36 +156,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023/10/12 04:55:57 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"c:\\Users\\clayb\\Anaconda3\\envs\\MLflow2\\Lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\"\n"
-     ]
-    },
-    {
-     "ename": "MlflowException",
-     "evalue": "Path 'K-NN_Music_Features_3' already exists and is not empty",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMlflowException\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\clayb\\Documents\\GitHub\\holbertonschool-machine_learning\\reinforcement_learning\\pipeline\\ml_life_cycle\\MLFlow.ipynb Cell 12\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/clayb/Documents/GitHub/holbertonschool-machine_learning/reinforcement_learning/pipeline/ml_life_cycle/MLFlow.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m knn\u001b[39m.\u001b[39mfit(X_train, y_train)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/clayb/Documents/GitHub/holbertonschool-machine_learning/reinforcement_learning/pipeline/ml_life_cycle/MLFlow.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# Save the model using MLflow\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/clayb/Documents/GitHub/holbertonschool-machine_learning/reinforcement_learning/pipeline/ml_life_cycle/MLFlow.ipynb#X13sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m mlflow\u001b[39m.\u001b[39msklearn\u001b[39m.\u001b[39msave_model(sk_model\u001b[39m=\u001b[39mknn, path\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mK-NN_Music_Features_3\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/clayb/Documents/GitHub/holbertonschool-machine_learning/reinforcement_learning/pipeline/ml_life_cycle/MLFlow.ipynb#X13sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# Log the model\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/clayb/Documents/GitHub/holbertonschool-machine_learning/reinforcement_learning/pipeline/ml_life_cycle/MLFlow.ipynb#X13sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m mlflow\u001b[39m.\u001b[39msklearn\u001b[39m.\u001b[39mlog_model(knn, \u001b[39m\"\u001b[39m\u001b[39mKNN_Model\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\clayb\\Anaconda3\\envs\\MLflow2\\Lib\\site-packages\\mlflow\\sklearn\\__init__.py:242\u001b[0m, in \u001b[0;36msave_model\u001b[1;34m(sk_model, path, conda_env, code_paths, mlflow_model, serialization_format, signature, input_example, pip_requirements, extra_pip_requirements, pyfunc_predict_fn, metadata)\u001b[0m\n\u001b[0;32m    233\u001b[0m \u001b[39mif\u001b[39;00m serialization_format \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m SUPPORTED_SERIALIZATION_FORMATS:\n\u001b[0;32m    234\u001b[0m     \u001b[39mraise\u001b[39;00m MlflowException(\n\u001b[0;32m    235\u001b[0m         message\u001b[39m=\u001b[39m(\n\u001b[0;32m    236\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mUnrecognized serialization format: \u001b[39m\u001b[39m{\u001b[39;00mserialization_format\u001b[39m}\u001b[39;00m\u001b[39m. Please specify one\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    239\u001b[0m         error_code\u001b[39m=\u001b[39mINVALID_PARAMETER_VALUE,\n\u001b[0;32m    240\u001b[0m     )\n\u001b[1;32m--> 242\u001b[0m _validate_and_prepare_target_save_path(path)\n\u001b[0;32m    243\u001b[0m code_path_subdir \u001b[39m=\u001b[39m _validate_and_copy_code_paths(code_paths, path)\n\u001b[0;32m    245\u001b[0m \u001b[39mif\u001b[39;00m signature \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m input_example \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\clayb\\Anaconda3\\envs\\MLflow2\\Lib\\site-packages\\mlflow\\utils\\model_utils.py:130\u001b[0m, in \u001b[0;36m_validate_and_prepare_target_save_path\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m    128\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_validate_and_prepare_target_save_path\u001b[39m(path):\n\u001b[0;32m    129\u001b[0m     \u001b[39mif\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexists(path) \u001b[39mand\u001b[39;00m \u001b[39many\u001b[39m(os\u001b[39m.\u001b[39mscandir(path)):\n\u001b[1;32m--> 130\u001b[0m         \u001b[39mraise\u001b[39;00m MlflowException(\n\u001b[0;32m    131\u001b[0m             message\u001b[39m=\u001b[39m\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mPath \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mpath\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m already exists and is not empty\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    132\u001b[0m             error_code\u001b[39m=\u001b[39mRESOURCE_ALREADY_EXISTS,\n\u001b[0;32m    133\u001b[0m         )\n\u001b[0;32m    135\u001b[0m     os\u001b[39m.\u001b[39mmakedirs(path, exist_ok\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mMlflowException\u001b[0m: Path 'K-NN_Music_Features_3' already exists and is not empty"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fit the model\n",
     "knn.fit(X_train, y_train)\n",
     "\n",
     "# Save the model using MLflow\n",
-    "mlflow.sklearn.save_model(sk_model=knn, path=\"K-NN_Music_Features_3\")\n",
+    "mlflow.sklearn.save_model(sk_model=knn, path=\"K-NN_Music_Features_5\")\n",
     "\n",
     "# Log the model\n",
     "mlflow.sklearn.log_model(knn, \"KNN_Model\")\n",
@@ -235,14 +212,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artifact URI: file:///c:/Users/clayb/Documents/GitHub/holbertonschool-machine_learning/reinforcement_learning/pipeline/ml_life_cycle/remote_server_uri/149871096565536443/b058319d877e4bf49f3c1ed866b318c5/artifacts\n"
+      "Artifact URI: mlflow-artifacts:/445246962365691981/76a4784edaf54367bf85e3bd8d37220e/artifacts\n"
      ]
     }
    ],
@@ -284,15 +261,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/10/12 05:00:54 WARNING mlflow.sklearn.utils: log_loss failed. The metric training_log_loss will not be recorded. Metric error: y_true contains only one label (0.0). Please provide the true labels explicitly through the labels argument.\n",
-      "2023/10/12 05:00:54 WARNING mlflow.sklearn.utils: roc_auc_score failed. The metric training_roc_auc will not be recorded. Metric error: Only one class present in y_true. ROC AUC score is not defined in that case.\n"
+      "2023/10/12 05:38:12 WARNING mlflow.sklearn.utils: log_loss failed. The metric training_log_loss will not be recorded. Metric error: y_true contains only one label (0.0). Please provide the true labels explicitly through the labels argument.\n",
+      "2023/10/12 05:38:12 WARNING mlflow.sklearn.utils: roc_auc_score failed. The metric training_roc_auc will not be recorded. Metric error: Only one class present in y_true. ROC AUC score is not defined in that case.\n"
      ]
     },
     {
@@ -329,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -337,24 +314,24 @@
      "output_type": "stream",
      "text": [
       "Registered model 'K-NN' already exists. Creating a new version of this model...\n",
-      "2023/10/12 05:01:43 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation. Model name: K-NN, version 3\n",
-      "Created version '3' of model 'K-NN'.\n"
+      "2023/10/12 05:38:23 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation. Model name: K-NN, version 2\n",
+      "Created version '2' of model 'K-NN'.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<mlflow.models.model.ModelInfo at 0x1a6cfb79d50>"
+       "<mlflow.models.model.ModelInfo at 0x1a6cdb593d0>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mlflow.sklearn.log_model(\n",
-    "    sk_model=knn,\n",
+    "    sk_model=knn_clayton,\n",
     "    artifact_path=\"sklearn-model\",\n",
     "    registered_model_name=\"K-NN\",\n",
     ")"
@@ -362,7 +339,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<mlflow.models.model.ModelInfo at 0x1a6cfc03350>"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# # Save the model using MLflow\n",
+    "# mlflow.sklearn.save_model(sk_model=knn, path=\"K-NN_Music_Features_4\")\n",
+    "\n",
+    "# Log the model\n",
+    "mlflow.sklearn.log_model(knn, \"KNN_Model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
