API task push (still debugging)

--- a/reinforcement_learning/pipeline/apis/apis.ipynb
+++ b/reinforcement_learning/pipeline/apis/apis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,6 +149,197 @@
     "    planets = sentientPlanets()\n",
     "    for planet in planets:\n",
     "        print(planet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 2. Rate me is you can!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import sys\n",
+    "from datetime import datetime, timedelta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2546150355.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    response = requests.get(api_url):\u001b[0m\n\u001b[1;37m                                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fetch_user_location(api_url):\n",
+    "    \"\"\"fetches user location\"\"\"\n",
+    "    response = requests.get(api_url):\n",
+    "\n",
+    "    # check if response is valid\n",
+    "    if response.status_code == 200:\n",
+    "        # Parse the JSON data from the response\n",
+    "        data = response.json()\n",
+    "        \n",
+    "        # Print the location of the user\n",
+    "        print(data.get('location', 'Location not set'))\n",
+    "        \n",
+    "    elif response.status_code == 404:\n",
+    "        # User does not exist\n",
+    "        print(\"Not found\")\n",
+    "        \n",
+    "    elif response.status_code == 403:\n",
+    "        # Rate limit exceeded\n",
+    "        reset_time = int(response.headers.get('X-Ratelimit-Reset', 0))\n",
+    "        \n",
+    "        # Calculate the time remaining for the rate limit to reset\n",
+    "        reset_time = datetime.fromtimestamp(reset_time) - datetime.now()\n",
+    "        minutes = reset_time.total_seconds() // 60\n",
+    "        \n",
+    "        print(f\"Reset in {int(minutes)} min\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensure the script is not executed when imported\n",
+    "if __name__ == \"__main__\":\n",
+    "    # The API URL is passed as the first argument\n",
+    "    api_url = sys.argv[1]\n",
+    "    \n",
+    "    # Fetch and print the user location\n",
+    "    fetch_user_location(api_url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. First launch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fetch_first_launch():\n",
+    "    # Fetch launches from SpaceX API\n",
+    "    response = requests.get(\"https://api.spacexdata.com/v4/launches\")\n",
+    "    launches = response.json()\n",
+    "    \n",
+    "    # Sort launches by date_unix\n",
+    "    sorted_launches = sorted(launches, key=lambda x: x['date_unix'])\n",
+    "    \n",
+    "    # Get the first launch\n",
+    "    first_launch = sorted_launches[0]\n",
+    "    \n",
+    "    # Extract required information\n",
+    "    launch_name = first_launch['name']\n",
+    "    launch_date = first_launch['date_local']\n",
+    "    rocket_id = first_launch['rocket']\n",
+    "    launchpad_id = first_launch['launchpad']\n",
+    "    \n",
+    "    # Fetch rocket details\n",
+    "    rocket_response = requests.get(f\"https://api.spacexdata.com/v4/rockets/{rocket_id}\")\n",
+    "    rocket_name = rocket_response.json()['name']\n",
+    "    \n",
+    "    # Fetch launchpad details\n",
+    "    launchpad_response = requests.get(f\"https://api.spacexdata.com/v4/launchpads/{launchpad_id}\")\n",
+    "    launchpad_data = launchpad_response.json()\n",
+    "    launchpad_name = launchpad_data['name']\n",
+    "    launchpad_locality = launchpad_data['locality']\n",
+    "    \n",
+    "    # Print the information\n",
+    "    print(f\"{launch_name} ({launch_date}) {rocket_name} - {launchpad_name} ({launchpad_locality})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the script is not executed when imported\n",
+    "if __name__ == \"__main__\":\n",
+    "    fetch_first_launch()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. How many by rocket? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fetch_launches_per_rocket():\n",
+    "    # Initialize rocket count dictionary\n",
+    "    rocket_count = Counter()\n",
+    "    \n",
+    "    # Fetch launches from SpaceX API\n",
+    "    response = requests.get(\"https://api.spacexdata.com/v3/launches\")\n",
+    "    launches = response.json()\n",
+    "    \n",
+    "    # Count launches per rocket\n",
+    "    for launch in launches:\n",
+    "        rocket_id = launch['rocket']['rocket_id']\n",
+    "        \n",
+    "        # Fetch rocket details\n",
+    "        rocket_response = requests.get(f\"https://api.spacexdata.com/v3/rockets/{rocket_id}\")\n",
+    "        rocket_name = rocket_response.json()['rocket_name']\n",
+    "        \n",
+    "        # Increment rocket count\n",
+    "        rocket_count[rocket_name] += 1\n",
+    "    \n",
+    "    # Sort by number of launches and then by rocket name\n",
+    "    sorted_rockets = sorted(rocket_count.items(), key=lambda x: (-x[1], x[0]))\n",
+    "    \n",
+    "    # Print the sorted rocket count\n",
+    "    for rocket, count in sorted_rockets:\n",
+    "        print(f\"{rocket}: {count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensure the script is not executed when imported\n",
+    "if __name__ == \"__main__\":\n",
+    "    fetch_launches_per_rocket()"
    ]
   }
  ],
