--- a/pipeline/pandas/pandas.ipynb
+++ b/pipeline/pandas/pandas.ipynb
@@ -473,75 +473,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Timestamp             0             1             2             3  \\\n",
-      "7     Weighted_Price  3.000000e+02           NaN           NaN           NaN   \n",
-      "6  Volume_(Currency)  3.000000e+00           NaN           NaN           NaN   \n",
-      "5       Volume_(BTC)  1.000000e-02           NaN           NaN           NaN   \n",
-      "0          Timestamp  1.417412e+09  1.417412e+09  1.417412e+09  1.417412e+09   \n",
-      "1               Open  3.000000e+02           NaN           NaN           NaN   \n",
-      "3                Low  3.000000e+02           NaN           NaN           NaN   \n",
-      "2               High  3.000000e+02           NaN           NaN           NaN   \n",
-      "4              Close  3.000000e+02           NaN           NaN           NaN   \n",
+      "                        2099759       2099758       2099757       2099756  \\\n",
+      "Timestamp          1.546899e+09  1.546899e+09  1.546899e+09  1.546899e+09   \n",
+      "Open               4.005510e+03  4.006010e+03  4.006010e+03  4.006010e+03   \n",
+      "High               4.006010e+03  4.006010e+03  4.006010e+03  4.006570e+03   \n",
+      "Low                4.005510e+03  4.005500e+03  4.006000e+03  4.006000e+03   \n",
+      "Close              4.005990e+03  4.005500e+03  4.006010e+03  4.006010e+03   \n",
+      "Volume_(BTC)       1.752778e+00  2.699700e+00  1.192123e+00  9.021637e-01   \n",
+      "Volume_(Currency)  7.021184e+03  1.081424e+04  4.775647e+03  3.614083e+03   \n",
+      "Weighted_Price     4.005746e+03  4.005720e+03  4.006004e+03  4.006017e+03   \n",
       "\n",
-      "              4             5             6             7             8  ...  \\\n",
-      "7           NaN           NaN           NaN  3.000000e+02           NaN  ...   \n",
-      "6           NaN           NaN           NaN  3.000000e+00           NaN  ...   \n",
-      "5           NaN           NaN           NaN  1.000000e-02           NaN  ...   \n",
-      "0  1.417412e+09  1.417412e+09  1.417412e+09  1.417412e+09  1.417412e+09  ...   \n",
-      "1           NaN           NaN           NaN  3.000000e+02           NaN  ...   \n",
-      "3           NaN           NaN           NaN  3.000000e+02           NaN  ...   \n",
-      "2           NaN           NaN           NaN  3.000000e+02           NaN  ...   \n",
-      "4           NaN           NaN           NaN  3.000000e+02           NaN  ...   \n",
+      "                        2099755       2099754       2099753       2099752  \\\n",
+      "Timestamp          1.546899e+09  1.546898e+09  1.546898e+09  1.546898e+09   \n",
+      "Open               4.006010e+03  4.006570e+03  4.006560e+03  4.003490e+03   \n",
+      "High               4.006570e+03  4.006570e+03  4.006570e+03  4.007290e+03   \n",
+      "Low                4.006000e+03  4.006000e+03  4.006560e+03  4.003490e+03   \n",
+      "Close              4.006010e+03  4.006010e+03  4.006560e+03  4.006570e+03   \n",
+      "Volume_(BTC)       3.382954e+00  6.951222e+00  8.475772e+00  1.183828e+01   \n",
+      "Volume_(Currency)  1.355343e+04  2.784951e+04  3.395870e+04  4.741754e+04   \n",
+      "Weighted_Price     4.006390e+03  4.006419e+03  4.006561e+03  4.005441e+03   \n",
       "\n",
-      "        2099750       2099751       2099752       2099753       2099754  \\\n",
-      "7  4.007993e+03  4.003925e+03  4.005441e+03  4.006561e+03  4.006419e+03   \n",
-      "6  1.819998e+04  3.784576e+04  4.741754e+04  3.395870e+04  2.784951e+04   \n",
-      "5  4.540920e+00  9.452163e+00  1.183828e+01  8.475772e+00  6.951222e+00   \n",
-      "0  1.546898e+09  1.546898e+09  1.546898e+09  1.546898e+09  1.546898e+09   \n",
-      "1  4.009540e+03  4.007000e+03  4.003490e+03  4.006560e+03  4.006570e+03   \n",
-      "3  4.007000e+03  4.000240e+03  4.003490e+03  4.006560e+03  4.006000e+03   \n",
-      "2  4.009540e+03  4.007010e+03  4.007290e+03  4.006570e+03  4.006570e+03   \n",
-      "4  4.007010e+03  4.003490e+03  4.006570e+03  4.006560e+03  4.006010e+03   \n",
+      "                        2099751       2099750  ...       9        \\\n",
+      "Timestamp          1.546898e+09  1.546898e+09  ...  1.417413e+09   \n",
+      "Open               4.007000e+03  4.009540e+03  ...           NaN   \n",
+      "High               4.007010e+03  4.009540e+03  ...           NaN   \n",
+      "Low                4.000240e+03  4.007000e+03  ...           NaN   \n",
+      "Close              4.003490e+03  4.007010e+03  ...           NaN   \n",
+      "Volume_(BTC)       9.452163e+00  4.540920e+00  ...           NaN   \n",
+      "Volume_(Currency)  3.784576e+04  1.819998e+04  ...           NaN   \n",
+      "Weighted_Price     4.003925e+03  4.007993e+03  ...           NaN   \n",
       "\n",
-      "        2099755       2099756       2099757       2099758       2099759  \n",
-      "7  4.006390e+03  4.006017e+03  4.006004e+03  4.005720e+03  4.005746e+03  \n",
-      "6  1.355343e+04  3.614083e+03  4.775647e+03  1.081424e+04  7.021184e+03  \n",
-      "5  3.382954e+00  9.021637e-01  1.192123e+00  2.699700e+00  1.752778e+00  \n",
-      "0  1.546899e+09  1.546899e+09  1.546899e+09  1.546899e+09  1.546899e+09  \n",
-      "1  4.006010e+03  4.006010e+03  4.006010e+03  4.006010e+03  4.005510e+03  \n",
-      "3  4.006000e+03  4.006000e+03  4.006000e+03  4.005500e+03  4.005510e+03  \n",
-      "2  4.006570e+03  4.006570e+03  4.006010e+03  4.006010e+03  4.006010e+03  \n",
-      "4  4.006010e+03  4.006010e+03  4.006010e+03  4.005500e+03  4.005990e+03  \n",
+      "                        8             7             6             5        \\\n",
+      "Timestamp          1.417412e+09  1.417412e+09  1.417412e+09  1.417412e+09   \n",
+      "Open                        NaN  3.000000e+02           NaN           NaN   \n",
+      "High                        NaN  3.000000e+02           NaN           NaN   \n",
+      "Low                         NaN  3.000000e+02           NaN           NaN   \n",
+      "Close                       NaN  3.000000e+02           NaN           NaN   \n",
+      "Volume_(BTC)                NaN  1.000000e-02           NaN           NaN   \n",
+      "Volume_(Currency)           NaN  3.000000e+00           NaN           NaN   \n",
+      "Weighted_Price              NaN  3.000000e+02           NaN           NaN   \n",
       "\n",
-      "[8 rows x 2099761 columns]\n"
+      "                        4             3             2             1        \\\n",
+      "Timestamp          1.417412e+09  1.417412e+09  1.417412e+09  1.417412e+09   \n",
+      "Open                        NaN           NaN           NaN           NaN   \n",
+      "High                        NaN           NaN           NaN           NaN   \n",
+      "Low                         NaN           NaN           NaN           NaN   \n",
+      "Close                       NaN           NaN           NaN           NaN   \n",
+      "Volume_(BTC)                NaN           NaN           NaN           NaN   \n",
+      "Volume_(Currency)           NaN           NaN           NaN           NaN   \n",
+      "Weighted_Price              NaN           NaN           NaN           NaN   \n",
+      "\n",
+      "                        0        \n",
+      "Timestamp          1.417412e+09  \n",
+      "Open               3.000000e+02  \n",
+      "High               3.000000e+02  \n",
+      "Low                3.000000e+02  \n",
+      "Close              3.000000e+02  \n",
+      "Volume_(BTC)       1.000000e-02  \n",
+      "Volume_(Currency)  3.000000e+00  \n",
+      "Weighted_Price     3.000000e+02  \n",
+      "\n",
+      "[8 rows x 2099760 columns]\n"
      ]
     }
    ],
    "source": [
-    "# Assume df is loaded from a file\n",
+    "\n",
+    "\n",
     "df = from_file('coinbaseUSD_1-min_data_2014-12-01_to_2019-01-09.csv', ',')\n",
+    "# df = from_file('coinbaseUSD_1-min_data_2014-12-01_to_2019-01-09.csv', ',')\n",
     "\n",
     "# Transpose the DataFrame\n",
-    "df_transposed = df.T\n",
+    "df = df\n",
     "\n",
-    "# Reset the index if 'Timestamp' is an index after transposing\n",
-    "if 'Timestamp' in df_transposed.index:\n",
-    "    df_transposed.reset_index(inplace=True)\n",
-    "    df_transposed.rename(columns={'index': 'Timestamp'}, inplace=True)\n",
+    "# Sort the DataFrame in reverse chronological order based on the 'Timestamp' values\n",
+    "df = df.sort_values(by='Timestamp', ascending=False).T\n",
     "\n",
-    "# Sort by 'Timestamp' if it is a column\n",
-    "if 'Timestamp' in df_transposed.columns:\n",
-    "    df_sorted = df_transposed.sort_values(by='Timestamp', ascending=False)\n",
-    "    print(df_sorted.tail(8))\n",
-    "else:\n",
-    "    print(\"Timestamp column not found. Cannot sort DataFrame.\")\n"
+    "print(df.tail(8))\n"
    ]
   },
   {
@@ -797,40 +812,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                       Open    High     Low   Close  Volume_(BTC)  \\\n",
-      "         Timestamp                                                  \n",
-      "bitstamp 1417411980  379.99  380.00  379.99  380.00      3.901265   \n",
-      "coinbase 1417411980  300.00  300.00  300.00  300.00      0.010000   \n",
-      "bitstamp 1417412040  380.00  380.00  380.00  380.00     35.249895   \n",
-      "coinbase 1417412040     NaN     NaN     NaN     NaN           NaN   \n",
-      "bitstamp 1417412100  380.00  380.00  380.00  380.00      3.712000   \n",
-      "...                     ...     ...     ...     ...           ...   \n",
-      "         1417417860  378.75  380.09  378.04  380.09      7.523000   \n",
-      "coinbase 1417417920     NaN     NaN     NaN     NaN           NaN   \n",
-      "bitstamp 1417417920  380.09  380.10  380.09  380.10      1.503000   \n",
-      "         1417417980  380.10  380.10  378.85  378.85     26.599796   \n",
-      "coinbase 1417417980     NaN     NaN     NaN     NaN           NaN   \n",
+      "                       Open   High     Low   Close  Volume_(BTC)  \\\n",
+      "Timestamp                                                          \n",
+      "1417411980 bitstamp  379.99  380.0  379.99  380.00      3.901265   \n",
+      "           coinbase  300.00  300.0  300.00  300.00      0.010000   \n",
+      "1417412040 bitstamp  380.00  380.0  380.00  380.00     35.249895   \n",
+      "           coinbase     NaN    NaN     NaN     NaN           NaN   \n",
+      "1417412100 bitstamp  380.00  380.0  380.00  380.00      3.712000   \n",
+      "...                     ...    ...     ...     ...           ...   \n",
+      "1417417860 coinbase     NaN    NaN     NaN     NaN           NaN   \n",
+      "1417417920 bitstamp  380.09  380.1  380.09  380.10      1.503000   \n",
+      "           coinbase     NaN    NaN     NaN     NaN           NaN   \n",
+      "1417417980 bitstamp  380.10  380.1  378.85  378.85     26.599796   \n",
+      "           coinbase     NaN    NaN     NaN     NaN           NaN   \n",
       "\n",
       "                     Volume_(Currency)  Weighted_Price  \n",
-      "         Timestamp                                      \n",
-      "bitstamp 1417411980        1482.461708      379.995162  \n",
-      "coinbase 1417411980           3.000000      300.000000  \n",
-      "bitstamp 1417412040       13394.959997      380.000000  \n",
-      "coinbase 1417412040                NaN             NaN  \n",
-      "bitstamp 1417412100        1410.560000      380.000000  \n",
+      "Timestamp                                               \n",
+      "1417411980 bitstamp        1482.461708      379.995162  \n",
+      "           coinbase           3.000000      300.000000  \n",
+      "1417412040 bitstamp       13394.959997      380.000000  \n",
+      "           coinbase                NaN             NaN  \n",
+      "1417412100 bitstamp        1410.560000      380.000000  \n",
       "...                                ...             ...  \n",
-      "         1417417860        2847.248452      378.472478  \n",
-      "coinbase 1417417920                NaN             NaN  \n",
-      "bitstamp 1417417920         571.285290      380.096667  \n",
-      "         1417417980       10079.364182      378.926376  \n",
-      "coinbase 1417417980                NaN             NaN  \n",
+      "1417417860 coinbase                NaN             NaN  \n",
+      "1417417920 bitstamp         571.285290      380.096667  \n",
+      "           coinbase                NaN             NaN  \n",
+      "1417417980 bitstamp       10079.364182      378.926376  \n",
+      "           coinbase                NaN             NaN  \n",
       "\n",
       "[202 rows x 7 columns]\n"
      ]
@@ -841,14 +856,6 @@
     "df1 = from_file('coinbaseUSD_1-min_data_2014-12-01_to_2019-01-09.csv', ',')\n",
     "df2 = from_file('bitstampUSD_1-min_data_2012-01-01_to_2020-04-22.csv', ',')\n",
     "\n",
-    "\n",
-    "\n",
-    "# Concatenate the dataframes, adding keys. First bitstamp, then coinbase.\n",
-    "# Using 'inner' join to align both dataframes on the same timestamps\n",
-    "df = pd.concat([df2_filtered, df1_filtered], keys=['bitstamp', 'coinbase'], axis=0).sort_index()\n",
-    "\n",
-    "df = df.sort_values(by=['Timestamp'])\n",
-    "\n",
     "# Set 'Timestamp' as index for both dataframes\n",
     "df1.set_index('Timestamp', inplace=True)\n",
     "df2.set_index('Timestamp', inplace=True)\n",
@@ -857,10 +864,15 @@
     "df1_filtered = df1[(df1.index >= 1417411980) & (df1.index <= 1417417980)]\n",
     "df2_filtered = df2[(df2.index >= 1417411980) & (df2.index <= 1417417980)]\n",
     "\n",
-    "# # Sort both filtered dataframes by index to ensure chronological order\n",
-    "# df1_filtered.sort_index(inplace=True)\n",
-    "# df2_filtered.sort_index(inplace=True)\n",
+    "# Concatenate the dataframes, adding keys. First bitstamp, then coinbase.\n",
+    "# Using 'inner' join to align both dataframes on the same timestamps\n",
+    "df = pd.concat([df2_filtered, df1_filtered], keys=['bitstamp', 'coinbase'], axis=0)\n",
     "\n",
+    "# Sort the index to maintain chronological order\n",
+    "df.sort_index(inplace=True)\n",
+    "\n",
+    "# Swap the levels of the MultiIndex to have 'Timestamp' as the first level\n",
+    "df = df.swaplevel(0, 1).sort_index()\n",
     "\n",
     "# Display the concatenated dataframe\n",
     "print(df)"
